manifests/egresstest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: egresstest
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  name: egress-test
  namespace: egresstest
  labels:
    app: egress-test 
spec:
  ports:
  - port: 8000
    name: http
  selector:
    app: egress-test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: egress-test
  namespace: egresstest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: egress-test
      tier: backend
  template:
    metadata:
      labels:
        app: egress-test
        tier: backend
    spec:
      serviceAccountName: egress-test
      containers:
        - name: egress-test
          image: pliniogsnascimento/egress-test:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "50m"
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 3600
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: egress-test-route
  namespace: egresstest
spec:
  hosts:
  - "*"
  gateways:
  - ingress-apps
  http:
  - match:
    - uri:
        prefix: "/go/"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: egress-test.egresstest.svc.cluster.local
        port:
          number: 8000
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-apps
  namespace: egresstest
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: ordersapi
  namespace: egresstest
spec:
  hosts:
  - "jsonplaceholder.typicode.com"
  ports:
  - number: 80
    name: http
    protocol: HTTP
    targetPort: 443
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: jsonplaceholter
  namespace: egresstest
spec:
  host: jsonplaceholder.typicode.com
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 80
      tls:
        mode: SIMPLE
  # subsets:
  # - name: placeholder
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: egress-test-route-egress
#   namespace: egresstest
# spec:
#   hosts:
#   - "jsonplaceholder.typicode.com"
#   gateways:
#   - mesh
#   - istio-egressgateway
#   http:
#   - match:
#     - gateways:
#       - mesh
#       port: 80
#     route:
#     - destination:
#         host: "jsonplaceholder.typicode.com"
#         subset: placeholder
#         port: 
#           number: 80
#       weight: 100
#   - match:
#     - gateways:
#       - istio-egressgateway
#       port: 80
#     route:
#     - destination:
#         host: "jsonplaceholder.typicode.com"
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: Gateway
# metadata:
#   name: istio-egressgateway
#   namespace: egresstest
# spec:
#   selector:
#     istio: egressgateway
#   servers:
#   - port:
#       number: 80
#       name: http
#       protocol: HTTP
#     hosts:
#     - "jsonplaceholder.typicode.com"
